# drone_landing

./: CMakeLists.txt  ReadMe.md  enviroment_vars.sh  package.xml
RosBag_vis/: Nastawy_PID  ReadMe.md  pid_P_output.bag  pid_kryt_output.bag  pid_output_vis.py
RosBag_vis/Circ_2/: drone_pad_pos_1.bag  drone_pad_pos_10.bag  drone_pad_pos_11_behind.bag  drone_pad_pos_12_behind.bag  drone_pad_pos_13_behind.bag  drone_pad_pos_14_behind.bag  drone_pad_pos_15_behind.bag  drone_pad_pos_16_front.bag  drone_pad_pos_17_front.bag  drone_pad_pos_2.bag  drone_pad_pos_3.bag  drone_pad_pos_4.bag  drone_pad_pos_5.bag  drone_pad_pos_6.bag  drone_pad_pos_7.bag  drone_pad_pos_8.bag  drone_pad_pos_9.bag  kalman_output_1.bag  kalman_output_10.bag  kalman_output_2.bag  kalman_output_3.bag  kalman_output_4.bag  kalman_output_5.bag  kalman_output_6.bag  kalman_output_7.bag  kalman_output_8.bag  kalman_output_9.bag
RosBag_vis/Circ_traj_tests/: drone_pad_pos_1.bag  drone_pad_pos_10.bag  drone_pad_pos_2.bag  drone_pad_pos_3.bag  drone_pad_pos_4.bag  drone_pad_pos_5.bag  drone_pad_pos_6.bag  drone_pad_pos_7.bag  drone_pad_pos_8.bag  kalman_output_1.bag  kalman_output_10.bag  kalman_output_2.bag  kalman_output_3.bag  kalman_output_4.bag  kalman_output_5.bag  kalman_output_6.bag  kalman_output_7.bag  kalman_output_8.bag
RosBag_vis/Kalman_bags/: kalman_output_0.001.bag  kalman_output_0.01.bag  kalman_output_0.01_0.1.bag  kalman_output_0.01_0.1_fixedbag.bag  kalman_output_0.01_1.bag  kalman_output_0.01_10.bag  kalman_output_0.01_100.bag
RosBag_vis/Line_2/: drone_pad_pos_1.bag  drone_pad_pos_10.bag  drone_pad_pos_11_behind.bag  drone_pad_pos_12_behind.bag  drone_pad_pos_13_behind.bag  drone_pad_pos_14_front.bag  drone_pad_pos_15_front.bag  drone_pad_pos_16_front.bag  drone_pad_pos_2.bag  drone_pad_pos_3.bag  drone_pad_pos_4.bag  drone_pad_pos_5.bag  drone_pad_pos_6.bag  drone_pad_pos_7.bag  drone_pad_pos_8.bag  drone_pad_pos_9.bag  kalman_output_1.bag  kalman_output_10.bag  kalman_output_2.bag  kalman_output_3.bag  kalman_output_4.bag  kalman_output_5.bag  kalman_output_6.bag  kalman_output_7.bag  kalman_output_8.bag  kalman_output_9.bag
RosBag_vis/PID_bags/: pid_P(0.4)_Alt(0.5-1.5)_output.bag  pid_PID(0.5, 0.01, 0.15)_lowAlt_output.bag  pid_PID_output.bag  pid_PI_output.bag  pid_output_landing_10_circle_box.bag  pid_output_landing_11_circle_box_(great).bag  pid_output_landing_12_static_box.bag  pid_output_landing_5.bag  pid_output_landing_6.bag  pid_output_landing_7_(great).bag  pid_output_landing_8_box.bag  pid_output_landing_9_box.bag  pid_output_landing_P.bag
RosBag_vis/Position/: drone_pad_pos_1.bag  drone_pad_pos_10_(PID_output)_circle_box.bag  drone_pad_pos_11_(PID_output)_circle_box_(great).bag  drone_pad_pos_12_(PID_output)_static_box.bag  drone_pad_pos_2.bag  drone_pad_pos_3.bag  drone_pad_pos_4.bag  drone_pad_pos_5_(with_PID_output).bag  drone_pad_pos_6_(with_PID_output).bag  drone_pad_pos_7_(with_PID_output)_(movingPad_straight)_(great).bag  drone_pad_pos_8_(PID_output)_box.bag  drone_pad_pos_9_(PID_output)_box.bag  drone_pad_pos_circle_1_(very_good).bag
RosBag_vis/Static_2/: drone_pad_pos_1.bag  drone_pad_pos_10.bag  drone_pad_pos_2.bag  drone_pad_pos_3.bag  drone_pad_pos_4.bag  drone_pad_pos_5.bag  drone_pad_pos_6.bag  drone_pad_pos_7.bag  drone_pad_pos_8.bag  drone_pad_pos_9.bag  kalman_output_1.bag  kalman_output_10.bag  kalman_output_2.bag  kalman_output_3.bag  kalman_output_4.bag  kalman_output_5.bag  kalman_output_6.bag  kalman_output_7.bag  kalman_output_8.bag  kalman_output_9.bag
RosBag_vis/Static_landing_tests/: drone_pad_pos_1.bag  (+39 more)
launch/: ros_landing_launch.launch
msg/: droneLand.msg
plugins/moving_landing_pad/: CMakeLists.txt  moving_pad.cc  moving_pad_01ms.cc  moving_pad_circle.cc  moving_pad_circle_01ms.cc
src/: uav_control.cpp  vision_processing.cpp
worlds/: grass_plane_landing.world
(+62 files in other folders)
